# TK101

./: .dockerignore  .env.example  .gitignore  .gitmessage  AGENTS.md  CLAUDE.md  PROJECT_DESIGN.md  README.md  docker-compose.prod.yml  docker-compose.yml  hello.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_rbac_constraints.py  003_sns_tables.py  004_nas_search.py  005_form_filler.py  006_review_translations.py  007_finance_module_enhancement.py  008_finance_module_fixes.py  009_playground.py  010_distribution.py  011_distribution_weekly_data.py  012_distribution_products_company.py  013_distribution_products_vn_qty.py  014_playground_persistence.py  015_user_monthly_quota.py  016_playground_attachments.py  017_distribution_message_attachments.py  018_distribution_scenario_attachment_required.py  019_distribution_language.py  020_distribution_send_schedule.py  021_distribution_customs.py  022_sns_meta_channels.py  023_distribution_persona_telegram_sync.py  024_distribution_customs_columns.py  025_nas_hybrid_trgm.py  026_sns_post_comments.py  027_distribution_scenario_instruction.py  028_distribution_session_group.py  029_sns_comment_translation.py  030_distribution_scenario_cleanup.py  031_rbac_grants_multidept_status.py  032_drop_nas_text_chunks_pgvector.py  033_form_jobs_kind_docgen.py  034_sns_comment_summary.py  035_sns_post_category.py  036_distribution_docs_link_scenario.py  037_form_source_exclude.py  038_docgen_documents.py  039_playground_media_sharing.py  040_docgen_retouch_prompts.py  (+2 more)
backend/app/: __init__.py  config.py  container.py  database.py  dependencies.py  logging_setup.py  main.py
backend/app/api/: __init__.py
backend/app/domain/: __init__.py  exceptions.py
backend/app/infrastructure/: __init__.py
backend/app/models/: __init__.py  account.py  account_balance_snapshot.py  base.py  category.py  counterpart.py  department_module_grant.py  distribution.py  docgen.py  form_filler.py  nas_file.py  playground.py  review_translation.py  sns.py  tax_invoice.py  transaction.py  upload_log.py  user.py  user_department.py
backend/app/modules/: constants.py  registry.py
backend/app/routers/: accounts.py  attachments.py  auth.py  balance_snapshots.py  bank_import.py  categories.py  counterparts.py  distribution.py  distribution_analytics.py  distribution_customs.py  distribution_dashboard.py  distribution_generate_v2.py  distribution_scenarios.py  distribution_sessions.py  (+18 more)
backend/scripts/: migrate_marketing1_excel.py  seed.py
backend/tests/: conftest.py
(+504 files in other folders)
