[project]
name = "tk101-backend"
version = "0.1.0"
description = "TK101 AI accounting backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "email-validator>=2.0",
    "httpx>=0.27",
    # NAS 자료 검색 (v0.6.0 PoC) ------------------------------------------------
    "pgvector>=0.3",
    "pdfminer.six>=20231228",
    # v0.8.0 — PDF 추출 fallback. pdfminer가 빈 결과를 돌려준 PDF를 한 번 더 시도.
    # MIT 라이선스라 AGPL(PyMuPDF) 회피. 표/다단 레이아웃 회수율 향상이 주 목적.
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    # NAS 자료 검색 v0.7.0 — 한글/엑셀 추출 -----------------------------------
    # olefile: HWP5 OLE 컨테이너에서 PrvText(미리보기 텍스트) 스트림 직접 추출.
    # pyhwp는 최신 Python 호환 이슈가 있어 채택하지 않고, PrvText만 사용 (검색용으로 충분).
    # HWPX는 zip+xml 표준 포맷이라 표준 라이브러리(zipfile/xml.etree)로 처리.
    # XLSX는 openpyxl read_only 모드로 셀 값만 텍스트화.
    "olefile>=0.47",
    # T5 범용 문서 자동 작성기 (v0.8.0) ----------------------------------------
    "anthropic>=0.40",
    "langfuse>=2.50",
    # T8 AI Playground — Tencent MPaaS AIGC (OpenAI-compatible 단일 endpoint).
    # 8 공급자 (Claude/GPT/Gemini/Grok/Kimi/GLM/MiniMax/DeepSeek) 를 model 파라미터로 분기.
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
